# Sehat

./: .env  .env.example  .gitignore  LICENSE  Makefile  README.md
backend/: Dockerfile  alembic.ini  fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: channels.py  config.py  main.py
backend/app/agent/: composer.py  graph.py  nodes.py  prompts.py  state.py  triage.py
backend/app/api/: dashboard.py  human_override.py  web_chat.py  whatsapp.py
backend/app/database/: session.py
backend/app/models/: __init__.py  appointment.py  clinic_chunk.py  message.py  override.py  patient.py
backend/app/scripts/: __init__.py  seed_clinic_kb.py
backend/app/services/: clinic_info.py  dashboard.py  inactivity_checker.py  intake.py  memory.py  override.py  persist.py  pipeline.py  rag.py  scheduling.py  slack.py  web_chat.py  web_memory.py  whatsapp.py
backend/data/: clinic_kb.md
backend/database/migrations/: env.py
backend/evals/: __init__.py  fixtures.py  test_classification.py
backend/scripts/: Set-FlySecrets.ps1  scratch_gemini_triage.py  scratch_langgraph_triage.py  scratch_openai_triage.py
backend/tests/: conftest.py
backend/tests/integration/: test_health_api.py  test_whatsapp_triage.py  test_whatsapp_webhook.py
backend/tests/phases/: conftest.py  test_phase01_webhook_pipe.py  test_phase02_persistence.py  test_phase03_gemini_classify.py  test_phase04_langgraph.py  test_phase05_whatsapp_graph.py  test_phase06_session_memory.py  test_phase07_dashboard_override.py  test_phase08_specialists.py  test_phase09_eval_suite.py
backend/tests/system/: test_intake_flow.py
backend/tests/unit/: conftest.py  test_clinic_info.py  test_dashboard.py  test_db_session.py  test_eval_report.py  test_graph.py  test_inactivity_checker.py  test_intake.py  test_memory.py  test_persist.py  test_pipeline.py  test_rag.py  test_scheduling.py  test_slack.py  test_specialists.py  test_triage.py  test_web_channel.py  test_whatsapp_parser.py  test_whatsapp_send.py
docs/: cautions.md  (+7 more)
(+69 files in other folders)
