[project]
name = "sehat-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: fast tests with no I/O (pure logic)",
    "integration: in-process API tests via ASGI/TestClient",
    "system: end-to-end flows against the full application",
    "phase1: Phase 1 — Green API webhook pipe",
    "phase2: Phase 2 — Postgres message persistence",
    "phase3: Phase 3 — Gemini classification",
    "phase4: Phase 4 — LangGraph state machine",
    "phase5: Phase 5 — WhatsApp + graph wiring",
    "phase6: Phase 6 — session memory",
    "phase7: Phase 7 — dashboard + human override",
    "phase8: Phase 8 — specialist sub-agents",
    "phase9: Phase 9 — classification eval suite",
]
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
files = ["app"]
ignore_missing_imports = true
